--- a/src/components/FeedbackOptions/FeedbackOptions.module.css
+++ b/src/components/FeedbackOptions/FeedbackOptions.module.css
@@ -1,8 +1,8 @@
 .feedback__button {
     font-size: 18px;
-    /* margin-top: 30px; */
     padding: 8px;
     width: 100px;
+    text-transform: capitalize;
     background-color: #fff;
     border-radius: 40px 40px 40px 40px;
     cursor: pointer;
@@ -10,7 +10,7 @@
 }
 
 .feedback__button:not(:last-child) {
-    margin-right: 15px;
+    margin-right: 30px;
 }
 
 .feedback__button:hover {
